--- a/post.html
+++ b/post.html
@@ -14,43 +14,31 @@
         scroll-behavior: smooth;
       }
 
-      .thoughts-container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 20px;
-      }
-
       .article-list {
         display: grid;
-        gap: 20px;
-        margin-top: 30px;
+        gap: 30px;
+        margin-top: 40px;
       }
 
       .article-item {
-        background: white;
-        border: 2px solid #333;
-        border-radius: 12px;
-        padding: 25px;
         transition: all 0.3s ease;
         cursor: pointer;
+        padding: 20px 0;
+        border-bottom: 1px solid #eee;
       }
 
       .article-item:hover {
-        background: #333;
-        color: white;
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        transform: translateX(10px);
       }
 
-      .article-item:hover a {
-        color: white;
-        border-bottom-color: white;
+      .article-item:last-child {
+        border-bottom: none;
       }
 
       .article-preview h3 {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
         font-weight: 700;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
         font-family: 'JetBrains Mono', monospace;
       }
 
@@ -61,29 +49,28 @@
         transition: all 0.2s;
       }
 
+      .article-preview h3 a:hover {
+        border-bottom-color: #666;
+      }
+
       .article-preview p {
         color: #666;
         margin-bottom: 15px;
         line-height: 1.6;
+        font-size: 1.1rem;
       }
 
       .article-meta {
         display: flex;
-        gap: 15px;
+        gap: 20px;
         font-size: 0.9rem;
         color: #999;
+        margin-top: 10px;
       }
 
       /* Dark mode */
       body.dark .article-item {
-        background: #2a2a2a;
-        border-color: #e0e0e0;
-        color: #e0e0e0;
-      }
-
-      body.dark .article-item:hover {
-        background: #e0e0e0;
-        color: #333;
+        border-bottom-color: #333;
       }
 
       body.dark .article-preview h3 a {
@@ -91,9 +78,8 @@
         border-bottom-color: #e0e0e0;
       }
 
-      body.dark .article-item:hover .article-preview h3 a {
-        color: #333;
-        border-bottom-color: #333;
+      body.dark .article-preview h3 a:hover {
+        border-bottom-color: #bbb;
       }
 
       body.dark .article-preview p {
@@ -127,10 +113,9 @@
       </header>
 
       <section>
-        <div class="thoughts-container">
-          <h2>📚 Available Articles</h2>
-          
-          <div class="article-list">
+        <h2>📚 Available Articles</h2>
+        
+        <div class="article-list">
             <div class="article-item" onclick="window.location.href='post/why-decentralization-matter.html'">
               <div class="article-preview">
                 <h3><a href="post/why-decentralization-matter.html">Why Decentralization Matters?</a></h3>
@@ -155,7 +140,6 @@
               </div>
             </div>
           </div>
-        </div>
       </section>
 
       <footer>
