--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Define title -->
-    <title>Carl Barks</title>
+    <title>Scobru</title>
 
     <!-- Include favicon. Use, e.g., https://favicon.io/ -->
     <link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
@@ -36,7 +36,8 @@
     <div class="container">
         <!-- Profile Section -->
         <header class="profile">
-            <img src="https://scobru.github.io/images/image.png" alt="Scobru" class="avatar" />
+            <img src="https://pbs.twimg.com/profile_images/1486649866843529216/DSC3rQ3A_400x400.jpg" alt="Scobru"
+                class="avatar" />
             <h1>Scobru</h1>
             <p class="bio">Open Source Developer, Sound Designer & Teacher</p>
             <p class="description">
