--- a/index.html
+++ b/index.html
@@ -48,32 +48,128 @@
         <!-- Links Section -->
         <!-- Links Section -->
         <main class="links">
-            <h2 class="section-title">Development</h2>
-            <a href="https://shogun-eco.xyz" class="link-card" target="_blank">
-                <span class="link-text">SHOGUN a decentralized ecosystem build on top of gunDB</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-            <a href="https://tunecamp.vercel.app" class="link-card" target="_blank">
-                <span class="link-text">TUNECAMP a self-hosted music streaming platform</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-            <h2 class="section-title">Self Hosted</h2>
-            <a href="https://tunecamp.scobrudot.dev" class="link-card" target="_blank">
-                <span class="link-text">SUDO RECORDS is my personal TUNECAMP instance</span>
+            <h2 class="section-title">Shogun Ecosystem</h2>
+
+            <a href="https://shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/shogun.png" alt="Shogun" class="card-icon" />
+                <span class="link-text">Shogun - Decentralized Ecosystem</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
-            <h2 class="section-title">Music</h2>
+            <a href="https://github.com/scobru/shogun-relay" class="link-card" target="_blank">
+                <img src="images/relay.png" alt="Relay" class="card-icon" />
+                <span class="link-text">Relay - Network Node</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://github.com/scobru/shogun-mule" class="link-card" target="_blank">
+                <img src="images/mule.png" alt="Mule" class="card-icon" />
+                <span class="link-text">Mule - P2P Desktop Downloader</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://auth.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/auth.png" alt="Auth" class="card-icon" />
+                <span class="link-text">Auth - Decentralized authentication system</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://linda.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/linda.png" alt="Linda" class="card-icon" />
+                <span class="link-text">Linda - P2P Chat Protocol</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://wormhole.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/wormhole.png" alt="Wormhole" class="card-icon" />
+                <span class="link-text">Wormhole - Secure File Transfer</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://drive.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/drive.png" alt="Drive" class="card-icon" />
+                <span class="link-text">Drive - Encrypted Decentralized Storage</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://wallet.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/wallet.png" alt="Wallet" class="card-icon" />
+                <span class="link-text">Wallet - Hub for your crypto assets</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://mistodon.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/mistodon.png" alt="Mistodon" class="card-icon" />
+                <span class="link-text">Mistodon - Decentralized Social Network</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://notes.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/notes.png" alt="Notes" class="card-icon" />
+                <span class="link-text">Notes - Encrypted Note Taking</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://linko.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/linko.png" alt="Linko" class="card-icon" />
+                <span class="link-text">Linko - Decentralized Link Page</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://gypt.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/gypt.png" alt="GYPT" class="card-icon" />
+                <span class="link-text">GYPT - Geospatial Messenger</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://binnu.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/binnu.png" alt="Binnu" class="card-icon" />
+                <span class="link-text">Binnu - P2P Pastebin</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://scan.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/scan.png" alt="Scan" class="card-icon" />
+                <span class="link-text">Scan - Network Monitor</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://deals.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/deals.png" alt="Deals" class="card-icon" />
+                <span class="link-text">Deals - Storage Deals</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://dweb.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/dweb.png" alt="DWeb" class="card-icon" />
+                <span class="link-text">DWeb - Decentralized Web Publishing</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://pdos.shogun-eco.xyz/" class="link-card" target="_blank">
+                <img src="images/pdos01.png" alt="PDOS" class="card-icon" />
+                <span class="link-text">PDOS - Serverless Tools</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <h2 class="section-title">Music & Art</h2>
+
+            <a href="https://tunecamp.dev/" class="link-card" target="_blank">
+                <img src="images/tunecamp.png" alt="Tunecamp" class="card-icon" />
+                <span class="link-text">Tunecamp - Music Streaming Platform</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
             <a href="https://homologomusic.bandcamp.com" class="link-card" target="_blank">
-                <span class="link-text">HOMOLOGO music on bandcamp</span>
+                <span class="link-text">HOMOLOGO - Songwriter, Pop, Electronic</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
             <a href="https://fademusik.bandcamp.com" class="link-card" target="_blank">
-                <span class="link-text">FADEMUSIK music on bandcamp</span>
+                <span class="link-text">FADE - Electronic</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
             <a href="https://zimablue.bandcamp.com" class="link-card" target="_blank">
-                <span class="link-text">ZIMABLUE music on bandcamp</span>
+                <span class="link-text">ZIMABLUE - Ambient, Experimental</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
