--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </header>
 
         <!-- Links Section -->
-        <!-- Links Section -->
         <main class="links">
             <h2 class="section-title">Shogun Ecosystem</h2>
+            <p class="section-desc">Core tools for identity, transfer, and assets.</p>
 
             <a href="https://shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/shogun.png" alt="Shogun" class="card-icon" />
