--- a/index.html
+++ b/index.html
@@ -161,14 +161,17 @@
             </a>
 
             <a href="https://homologomusic.bandcamp.com" class="link-card" target="_blank">
+                <img src="images/homologo.png" alt="HOMOLOGO" class="card-icon" />
                 <span class="link-text">HOMOLOGO - Songwriter, Pop, Electronic</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
             <a href="https://fademusik.bandcamp.com" class="link-card" target="_blank">
+                <img src="images/fade.png" alt="FADE" class="card-icon" />
                 <span class="link-text">FADE - Electronic</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
             <a href="https://zimablue.bandcamp.com" class="link-card" target="_blank">
+                <img src="images/zimablue.png" alt="ZIMABLUE" class="card-icon" />
                 <span class="link-text">ZIMABLUE - Ambient, Experimental</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
